--- a/sqlserver2019bigdataclusters/SQL2019BDC/notebooks/bdc_tutorial_05.ipynb
+++ b/sqlserver2019bigdataclusters/SQL2019BDC/notebooks/bdc_tutorial_05.ipynb
@@ -60,7 +60,7 @@
                 {
                     "data": {
                         "text/plain": "<IPython.core.display.HTML object>",
-                        "text/html": "<table>\n<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>1</td><td>application_1569595626385_0002</td><td>pyspark3</td><td>idle</td><td><a target=\"_blank\" href=\"https://13.93.154.163:30443/gateway/default/yarn/proxy/application_1569595626385_0002/\">Link</a></td><td><a target=\"_blank\" href=\"https://13.93.154.163:30443/gateway/default/yarn/container/container_1569595626385_0002_01_000001/root\">Link</a></td><td>✔</td></tr></table>"
+                        "text/html": "<table>\n<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>2</td><td>application_1569595626385_0003</td><td>pyspark3</td><td>idle</td><td><a target=\"_blank\" href=\"https://13.93.154.163:30443/gateway/default/yarn/proxy/application_1569595626385_0003/\">Link</a></td><td><a target=\"_blank\" href=\"https://13.93.154.163:30443/gateway/default/yarn/container/container_1569595626385_0003_01_000001/root\">Link</a></td><td>✔</td></tr></table>"
                     },
                     "metadata": {},
                     "output_type": "display_data"
@@ -121,13 +121,20 @@
                 "x = x.interpolate() \r\n",
                 "\r\n",
                 "# Select the labels only (the measured battery life) \r\n",
-                "y = df.iloc[:,0].values.flatten()"
+                "y = df.iloc[:,0].values.flatten()\r\n",
+                "print('Interpolation Complete')"
             ],
             "metadata": {
                 "azdata_cell_guid": "0806c0d5-7f0d-4528-8ec4-57c21989717f"
             },
-            "outputs": [],
-            "execution_count": 4
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "text": "Interpolation Complete",
+                    "output_type": "stream"
+                }
+            ],
+            "execution_count": 5
         },
         {
             "cell_type": "code",
@@ -145,7 +152,7 @@
                     "output_type": "stream"
                 }
             ],
-            "execution_count": 5
+            "execution_count": 6
         },
         {
             "cell_type": "markdown",
@@ -169,9 +176,9 @@
             },
             "outputs": [
                 {
+                    "output_type": "stream",
                     "name": "stdout",
-                    "text": "GradientBoostingRegressor(alpha=0.9, criterion='friedman_mse', init=None,\n             learning_rate=0.1, loss='ls', max_depth=3, max_features=None,\n             max_leaf_nodes=None, min_impurity_decrease=0.0,\n             min_impurity_split=None, min_samples_leaf=1,\n             min_samples_split=2, min_weight_fraction_leaf=0.0,\n             n_estimators=100, n_iter_no_change=None, presort='auto',\n             random_state=None, subsample=1.0, tol=0.0001,\n             validation_fraction=0.1, verbose=0, warm_start=False)",
-                    "output_type": "stream"
+                    "text": "GradientBoostingRegressor(alpha=0.9, criterion='friedman_mse', init=None,\n             learning_rate=0.1, loss='ls', max_depth=3, max_features=None,\n             max_leaf_nodes=None, min_impurity_decrease=0.0,\n             min_impurity_split=None, min_samples_leaf=1,\n             min_samples_split=2, min_weight_fraction_leaf=0.0,\n             n_estimators=100, n_iter_no_change=None, presort='auto',\n             random_state=None, subsample=1.0, tol=0.0001,\n             validation_fraction=0.1, verbose=0, warm_start=False)"
                 }
             ],
             "execution_count": 7
@@ -187,9 +194,9 @@
             },
             "outputs": [
                 {
+                    "output_type": "stream",
                     "name": "stdout",
-                    "text": "array([1323.39791998])",
-                    "output_type": "stream"
+                    "text": "array([1323.39791998])"
                 }
             ],
             "execution_count": 8
@@ -224,9 +231,9 @@
             },
             "outputs": [
                 {
+                    "output_type": "stream",
                     "name": "stdout",
-                    "text": "array([1472.91111228, 1340.08897725, 1421.38601032, 1473.79033215,\n       1651.66584142, 1412.85617044, 1842.81351408, 1264.22762055,\n       1930.45602533, 1681.86345995])",
-                    "output_type": "stream"
+                    "text": "array([1472.91111228, 1340.08897725, 1421.38601032, 1473.79033215,\n       1651.66584142, 1412.85617044, 1842.81351408, 1264.22762055,\n       1930.45602533, 1681.86345995])"
                 }
             ],
             "execution_count": 9
@@ -270,9 +277,9 @@
             },
             "outputs": [
                 {
+                    "output_type": "stream",
                     "name": "stdout",
-                    "text": "/tmp/nm-local-dir/usercache/root/appcache/application_1569595626385_0002/container_1569595626385_0002_01_000001\n['tmpqinrvgwe', 'nm-local-dir', 'hsperfdata_root', 'hadoop-root-nodemanager.pid', 'pd1.pkl', 'jetty-0.0.0.0-8044-node-_-any-316263189197646260.dir', 'hadoop-root-datanode.pid', 'jetty-localhost-34715-datanode-_-any-5663113204536710212.dir', 'pdm.pkl']",
-                    "output_type": "stream"
+                    "text": "/tmp/nm-local-dir/usercache/root/appcache/application_1569595626385_0002/container_1569595626385_0002_01_000001\n['tmpqinrvgwe', 'nm-local-dir', 'hsperfdata_root', 'hadoop-root-nodemanager.pid', 'pd1.pkl', 'jetty-0.0.0.0-8044-node-_-any-316263189197646260.dir', 'hadoop-root-datanode.pid', 'jetty-localhost-34715-datanode-_-any-5663113204536710212.dir', 'pdm.pkl']"
                 }
             ],
             "execution_count": 19
