--- a/sqlserver2019bigdataclusters/SQL2019BDC/notebooks/bdc_tutorial_05.ipynb
+++ b/sqlserver2019bigdataclusters/SQL2019BDC/notebooks/bdc_tutorial_05.ipynb
@@ -101,7 +101,7 @@
                     "output_type": "stream"
                 }
             ],
-            "execution_count": 3
+            "execution_count": 8
         },
         {
             "cell_type": "markdown",
@@ -134,7 +134,7 @@
                     "output_type": "stream"
                 }
             ],
-            "execution_count": 5
+            "execution_count": 9
         },
         {
             "cell_type": "code",
@@ -152,7 +152,7 @@
                     "output_type": "stream"
                 }
             ],
-            "execution_count": 6
+            "execution_count": 10
         },
         {
             "cell_type": "markdown",
@@ -176,12 +176,12 @@
             },
             "outputs": [
                 {
-                    "output_type": "stream",
                     "name": "stdout",
-                    "text": "GradientBoostingRegressor(alpha=0.9, criterion='friedman_mse', init=None,\n             learning_rate=0.1, loss='ls', max_depth=3, max_features=None,\n             max_leaf_nodes=None, min_impurity_decrease=0.0,\n             min_impurity_split=None, min_samples_leaf=1,\n             min_samples_split=2, min_weight_fraction_leaf=0.0,\n             n_estimators=100, n_iter_no_change=None, presort='auto',\n             random_state=None, subsample=1.0, tol=0.0001,\n             validation_fraction=0.1, verbose=0, warm_start=False)"
+                    "text": "GradientBoostingRegressor(alpha=0.9, criterion='friedman_mse', init=None,\n             learning_rate=0.1, loss='ls', max_depth=3, max_features=None,\n             max_leaf_nodes=None, min_impurity_decrease=0.0,\n             min_impurity_split=None, min_samples_leaf=1,\n             min_samples_split=2, min_weight_fraction_leaf=0.0,\n             n_estimators=100, n_iter_no_change=None, presort='auto',\n             random_state=None, subsample=1.0, tol=0.0001,\n             validation_fraction=0.1, verbose=0, warm_start=False)",
+                    "output_type": "stream"
                 }
             ],
-            "execution_count": 7
+            "execution_count": 11
         },
         {
             "cell_type": "code",
@@ -194,12 +194,12 @@
             },
             "outputs": [
                 {
-                    "output_type": "stream",
                     "name": "stdout",
-                    "text": "array([1323.39791998])"
+                    "text": "array([1323.39791998])",
+                    "output_type": "stream"
                 }
             ],
-            "execution_count": 8
+            "execution_count": 12
         },
         {
             "cell_type": "markdown",
@@ -231,12 +231,12 @@
             },
             "outputs": [
                 {
-                    "output_type": "stream",
                     "name": "stdout",
-                    "text": "array([1472.91111228, 1340.08897725, 1421.38601032, 1473.79033215,\n       1651.66584142, 1412.85617044, 1842.81351408, 1264.22762055,\n       1930.45602533, 1681.86345995])"
+                    "text": "array([1472.91111228, 1340.08897725, 1421.38601032, 1473.79033215,\n       1651.66584142, 1412.85617044, 1842.81351408, 1264.22762055,\n       1930.45602533, 1681.86345995])",
+                    "output_type": "stream"
                 }
             ],
-            "execution_count": 9
+            "execution_count": 13
         },
         {
             "cell_type": "code",
@@ -252,7 +252,7 @@
                 "azdata_cell_guid": "160ceaf9-81c1-4bb8-92ca-511a8b928cac"
             },
             "outputs": [],
-            "execution_count": 15
+            "execution_count": 16
         },
         {
             "cell_type": "markdown",
@@ -270,19 +270,19 @@
                 "pickle.dump(model, pickle_file)\r\n",
                 "import os\r\n",
                 "print(os.getcwd())\r\n",
-                "os.listdir('///tmp')"
+                "os.listdir('//tmp/')"
             ],
             "metadata": {
                 "azdata_cell_guid": "75c70761-9c37-4446-85f4-71c4d32f6493"
             },
             "outputs": [
                 {
-                    "output_type": "stream",
                     "name": "stdout",
-                    "text": "/tmp/nm-local-dir/usercache/root/appcache/application_1569595626385_0002/container_1569595626385_0002_01_000001\n['tmpqinrvgwe', 'nm-local-dir', 'hsperfdata_root', 'hadoop-root-nodemanager.pid', 'pd1.pkl', 'jetty-0.0.0.0-8044-node-_-any-316263189197646260.dir', 'hadoop-root-datanode.pid', 'jetty-localhost-34715-datanode-_-any-5663113204536710212.dir', 'pdm.pkl']"
+                    "text": "/tmp/nm-local-dir/usercache/root/appcache/application_1569595626385_0003/container_1569595626385_0003_01_000001\n['nm-local-dir', 'hsperfdata_root', 'hadoop-root-nodemanager.pid', 'hadoop-root-datanode.pid', 'jetty-0.0.0.0-8044-node-_-any-1399597149712545407.dir', 'jetty-localhost-43849-datanode-_-any-4367549175596043164.dir', 'pdm.pkl', 'tmpo7d6l6mt']",
+                    "output_type": "stream"
                 }
             ],
-            "execution_count": 19
+            "execution_count": 18
         },
         {
             "cell_type": "markdown",
