First update for Ignite BDC Course

--- a/sqlserver2019bigdataclusters/SQL2019BDC/notebooks/bdc_tutorial_00.ipynb
+++ b/sqlserver2019bigdataclusters/SQL2019BDC/notebooks/bdc_tutorial_00.ipynb
@@ -26,7 +26,7 @@
                 "<img src=\"https://github.com/Microsoft/sqlworkshops/blob/master/graphics/solutions-microsoft-logo-small.png?raw=true\" alt=\"Microsoft\">\r\n",
                 "<br>\r\n",
                 "\r\n",
-                "# SQL Server 2019 big data cluster Tutorial - CTP 3.2\r\n",
+                "# SQL Server 2019 big data cluster Tutorial\r\n",
                 "## 00 - Scenario Overview and System Setup\r\n",
                 "\r\n",
                 "In this set of tutorials you'll work with an end-to-end scenario that uses SQL Server 2019's big data clusters to solve real-world problems. \r\n",
