--- a/sql2019workshop/sql2019wks/04_Availability/adr/basic_adr.ipynb
+++ b/sql2019workshop/sql2019wks/04_Availability/adr/basic_adr.ipynb
@@ -30,7 +30,7 @@
                 "## Step 1: Setup the database\r\n",
                 "Create a database and put a bunch of rows in a table. Make the database SIMPLE recovery to make it easier to analyze log truncation.\r\n",
                 "\r\n",
-                "The database assumes a path for a standard SQL Server Window installation. The database and log are created at 10Gb each to avoid any autogrow.\r\n",
+                "The database assumes a path for a standard SQL Server Window installation. The database and log are created at sizes each to avoid any autogrow.\r\n",
                 "\r\n",
                 "100,000 rows are created in the table to be able to show the different in log growth and rollback times.\r\n",
                 "\r\n",
@@ -272,7 +272,6 @@
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 4,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -306,7 +305,8 @@
                             ]
                         },
                         "text/html": "<table><tr><th>database_id</th><th>total_log_size_in_bytes</th><th>used_log_space_in_bytes</th><th>used_log_space_in_percent</th><th>log_space_in_bytes_since_last_backup</th></tr><tr><td>9</td><td>5368700928</td><td>4223991808</td><td>78.6781</td><td>1001320448</td></tr></table>"
-                    }
+                    },
+                    "metadata": {}
                 }
             ],
             "execution_count": 4
@@ -356,7 +356,6 @@
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 5,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -390,7 +389,8 @@
                             ]
                         },
                         "text/html": "<table><tr><th>database_id</th><th>total_log_size_in_bytes</th><th>used_log_space_in_bytes</th><th>used_log_space_in_percent</th><th>log_space_in_bytes_since_last_backup</th></tr><tr><td>9</td><td>5368700928</td><td>4224090112</td><td>78.67993</td><td>1000153088</td></tr></table>"
-                    }
+                    },
+                    "metadata": {}
                 }
             ],
             "execution_count": 5
@@ -477,7 +477,6 @@
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 7,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -511,7 +510,8 @@
                             ]
                         },
                         "text/html": "<table><tr><th>database_id</th><th>total_log_size_in_bytes</th><th>used_log_space_in_bytes</th><th>used_log_space_in_percent</th><th>log_space_in_bytes_since_last_backup</th></tr><tr><td>9</td><td>5368700928</td><td>66646016</td><td>1.241381</td><td>81920</td></tr></table>"
-                    }
+                    },
+                    "metadata": {}
                 }
             ],
             "execution_count": 7
@@ -640,7 +640,6 @@
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 10,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -674,7 +673,8 @@
                             ]
                         },
                         "text/html": "<table><tr><th>database_id</th><th>total_log_size_in_bytes</th><th>used_log_space_in_bytes</th><th>used_log_space_in_percent</th><th>log_space_in_bytes_since_last_backup</th></tr><tr><td>9</td><td>5368700928</td><td>1057402880</td><td>19.69569</td><td>768229376</td></tr></table>"
-                    }
+                    },
+                    "metadata": {}
                 },
                 {
                     "output_type": "display_data",
@@ -699,7 +699,6 @@
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 10,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -733,7 +732,8 @@
                             ]
                         },
                         "text/html": "<table><tr><th>database_id</th><th>total_log_size_in_bytes</th><th>used_log_space_in_bytes</th><th>used_log_space_in_percent</th><th>log_space_in_bytes_since_last_backup</th></tr><tr><td>9</td><td>5368700928</td><td>386572288</td><td>7.200481</td><td>122880</td></tr></table>"
-                    }
+                    },
+                    "metadata": {}
                 }
             ],
             "execution_count": 10
