Push changes for sql 2019 workshop

--- a/sql2019workshop/sql2019wks/04_Availability/adr/recovery_adr.ipynb
+++ b/sql2019workshop/sql2019wks/04_Availability/adr/recovery_adr.ipynb
@@ -270,7 +270,7 @@
                 "\r\n",
                 "Separate from this notebook, use a New Query in Azure Data Studio and run the following commands as a sysadmin. \r\n",
                 "\r\n",
-                "**Restart SQL Server and then examine the ERRORLOG to see how long recovery takes for the database. SQL Server must fully recover the database before you go to the next step. Because there is so much to recover this could take 10 minutes or more**\r\n",
+                "**Restart SQL Server and then examine the ERRORLOG to see how long recovery takes for the database. SQL Server must fully recover the database before you go to the next step. Because there is so much to recover this could take 10 minutes or more. TIP: Use the tail program on Linux or the Powershell command get-content errorlog -wait to see the results live from the ERRORLOG**\r\n",
                 "\r\n",
                 "```sql\r\n",
                 "USE gocowboys\r\n",
